Update server to new swagger file
