# aspnetcore-server-generated/aspnetcore-server/src/IO.Swagger/Models/GameType.cs
@@ -1,0 +1,56 @@
+/*
+ * Bombersauce API
+ *
+ * API for an agent of the Bombersauce AI-hackathon.
+ *
+ * OpenAPI spec version: 1.0.0
+ * 
+ * Generated by: https://github.com/swagger-api/swagger-codegen.git
+ */
+
+using System;
+using System.Linq;
+using System.IO;
+using System.Text;
+using System.Collections;
+using System.Collections.Generic;
+using System.Collections.ObjectModel;
+using System.ComponentModel.DataAnnotations;
+using System.Runtime.Serialization;
+using Newtonsoft.Json;
+
+namespace IO.Swagger.Models
+{ 
+        /// <summary>
+        /// Game type:  * `1` - FFA  * `2` - Team  * `3` - TeamRadio  * `4` - OneVsOne 
+        /// </summary>
+        /// <value>Game type:  * `1` - FFA  * `2` - Team  * `3` - TeamRadio  * `4` - OneVsOne </value>
+        [JsonConverter(typeof(Newtonsoft.Json.Converters.StringEnumConverter))]
+        public enum GameType
+        {
+            
+            /// <summary>
+            /// Enum _1Enum for 1
+            /// </summary>
+            [EnumMember(Value = "1")]
+            _1Enum = 1,
+            
+            /// <summary>
+            /// Enum _2Enum for 2
+            /// </summary>
+            [EnumMember(Value = "2")]
+            _2Enum = 2,
+            
+            /// <summary>
+            /// Enum _3Enum for 3
+            /// </summary>
+            [EnumMember(Value = "3")]
+            _3Enum = 3,
+            
+            /// <summary>
+            /// Enum _4Enum for 4
+            /// </summary>
+            [EnumMember(Value = "4")]
+            _4Enum = 4
+        }
+}
