# aspnetcore-server-generated/aspnetcore-server/src/IO.Swagger/wwwroot/swagger-original.json
@@ -6,7 +6,6 @@
     "title" : "Bombersauce API"
   },
   "host" : "localhost",
-  "basePath" : "/",
   "schemes" : [ "http" ],
   "paths" : {
     "/ping" : {
@@ -44,7 +43,7 @@
         "produces" : [ "application/json" ],
         "parameters" : [ {
           "in" : "body",
-          "name" : "body",
+          "name" : "state",
           "description" : "Game state",
           "required" : true,
           "schema" : {
@@ -106,13 +105,10 @@
       "properties" : {
         "id" : {
           "type" : "integer",
-          "format" : "int32",
-          "example" : 3
+          "format" : "int32"
         },
         "game_type" : {
-          "type" : "integer",
-          "format" : "int32",
-          "example" : 1
+          "$ref" : "#/definitions/game_type"
         }
       }
     },
@@ -124,71 +120,105 @@
           "properties" : {
             "alive" : {
               "type" : "array",
+              "example" : [ 10, 11, 12, 13 ],
+              "description" : "This array contains the ids of all alive players.",
               "items" : {
                 "type" : "integer",
                 "format" : "int32",
-                "example" : 10
-              }
+                "enum" : [ 10, 11, 12, 13 ]
+              },
+              "maxItems" : 4,
+              "minItems" : 0
             },
             "board" : {
               "type" : "array",
+              "example" : [ [ 0, 0, 2, 1, 1, 0, 1, 1, 2, 2, 2 ], [ 0, 10, 0, 0, 2, 2, 2, 0, 0, 13, 2 ], [ 2, 0, 0, 1, 2, 2, 2, 2, 0, 0, 1 ], [ 1, 0, 1, 0, 0, 0, 0, 1, 1, 0, 1 ], [ 1, 2, 2, 0, 0, 1, 1, 1, 1, 2, 1 ], [ 0, 2, 2, 0, 1, 0, 1, 0, 0, 2, 1 ], [ 1, 2, 2, 0, 1, 1, 0, 1, 2, 2, 1 ], [ 1, 0, 2, 1, 1, 0, 1, 0, 0, 0, 2 ], [ 2, 0, 0, 1, 1, 0, 2, 0, 0, 0, 2 ], [ 2, 11, 0, 0, 2, 2, 2, 0, 0, 12, 0 ], [ 2, 2, 1, 1, 1, 1, 1, 2, 2, 0, 0 ] ],
+              "description" : "The playing board. The first row in this list is the top of the board, and so on.",
               "items" : {
                 "type" : "array",
                 "items" : {
                   "type" : "integer",
                   "format" : "int32",
-                  "example" : 0
-                }
-              }
+                  "description" : "Item:\n * `0` - Passage, meaning you can pass through\n * `1` - Rigid, meaning you can't pass through\n * `2` - Wood, which can be removed by explosions\n * `3` - Bomb\n * `4` - Flames from an exploded bomb\n * `5` - Fog\n * `6` - ExtraBomb powerup, which increases your ammo by 1\n * `7` - IncrRange powerup, which increases your blast strength by 1\n * `8` - Kick powerup, which allows you to kick bombs\n * `9` - AgentDummy\n * `10` - Agent 0\n * `11` - Agent 1\n * `12` - Agent 2\n * `13` - Agent 3\n * `14` - Title\n * `20` - Background\n",
+                  "enum" : [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 20 ]
+                },
+                "maxItems" : 11,
+                "minItems" : 11
+              },
+              "maxItems" : 11,
+              "minItems" : 11
             },
             "bomb_blast_strength" : {
               "type" : "array",
+              "example" : [ [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ] ],
+              "description" : "The blast strength of each bomb on the playing board. The first row in this list is the top of the board, and so on. If a tile does not contain a bomb, its value will be 0.",
               "items" : {
                 "type" : "array",
                 "items" : {
-                  "type" : "integer",
-                  "format" : "int32",
-                  "example" : 0
-                }
-              }
+                  "type" : "number",
+                  "format" : "float",
+                  "example" : 0.0
+                },
+                "maxItems" : 11,
+                "minItems" : 11
+              },
+              "maxItems" : 11,
+              "minItems" : 11
             },
             "bomb_life" : {
               "type" : "array",
+              "example" : [ [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ] ],
+              "description" : "The remaining time of each bomb on the playing board before it explodes. The first row in this list is the top of the board, and so on. If a tile does not contain a bomb, its value will be 0.",
               "items" : {
                 "type" : "array",
                 "items" : {
-                  "type" : "integer",
-                  "format" : "int32",
-                  "example" : 0
-                }
-              }
+                  "type" : "number",
+                  "format" : "float",
+                  "example" : 0.0
+                },
+                "maxItems" : 11,
+                "minItems" : 11
+              },
+              "maxItems" : 11,
+              "minItems" : 11
             },
             "bomb_moving_direction" : {
               "type" : "array",
+              "example" : [ [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ] ],
+              "description" : "The movement direction of each bomb on the playing board. The first row in this list is the top of the board, and so on. If a tile does not contain a bomb, its value will be 0.",
               "items" : {
                 "type" : "array",
                 "items" : {
-                  "type" : "integer",
-                  "format" : "int32",
-                  "example" : 0
-                }
-              }
+                  "type" : "number",
+                  "format" : "float",
+                  "example" : 0.0,
+                  "description" : "Direction:\n * `0` - Not moving\n * `1` - Up\n * `2` - Down\n * `3` - Left\n * `4` - Right\n"
+                },
+                "maxItems" : 11,
+                "minItems" : 11
+              },
+              "maxItems" : 11,
+              "minItems" : 11
             },
             "flame_life" : {
               "type" : "array",
+              "example" : [ [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ], [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ] ],
+              "description" : "The remaining time of each flame on the playing board before it disappears. The first row in this list is the top of the board, and so on. If a tile does not contain a flame, its value will be 0.",
               "items" : {
                 "type" : "array",
                 "items" : {
-                  "type" : "integer",
-                  "format" : "int32",
-                  "example" : 0
-                }
-              }
+                  "type" : "number",
+                  "format" : "float",
+                  "example" : 0.0
+                },
+                "maxItems" : 11,
+                "minItems" : 11
+              },
+              "maxItems" : 11,
+              "minItems" : 11
             },
             "game_type" : {
-              "type" : "integer",
-              "format" : "int32",
-              "example" : 1
+              "$ref" : "#/definitions/game_type"
             },
             "game_env" : {
               "type" : "string",
@@ -196,19 +226,26 @@
             },
             "position" : {
               "type" : "array",
+              "example" : [ 1, 9 ],
+              "description" : "The `[x, y]` position of your agent on the board. The bottom left cell has `x = 0` and `y = 0`.",
               "items" : {
                 "type" : "integer",
                 "format" : "int32",
-                "example" : 1
-              }
+                "minimum" : 0,
+                "maximum" : 10
+              },
+              "maxItems" : 2,
+              "minItems" : 2
             },
             "blast_strength" : {
               "type" : "integer",
               "format" : "int32",
-              "example" : 2
+              "example" : 2,
+              "description" : "The blast strength of your agent's bombs."
             },
             "can_kick" : {
-              "type" : "boolean"
+              "type" : "boolean",
+              "description" : "Whether your agent can kick bombs. You can gain this ability by collecting the Kick powerup."
             },
             "teammate" : {
               "type" : "integer",
@@ -218,14 +255,16 @@
             "ammo" : {
               "type" : "integer",
               "format" : "int32",
-              "example" : 1
+              "example" : 1,
+              "description" : "The number of bombs your agent can place."
             },
             "enemies" : {
               "type" : "array",
+              "example" : [ 11, 12, 13 ],
+              "description" : "The ids of your enemies.",
               "items" : {
                 "type" : "integer",
-                "format" : "int32",
-                "example" : 10
+                "format" : "int32"
               }
             },
             "step_count" : {
@@ -248,11 +287,12 @@
         "action" : {
           "type" : "integer",
           "format" : "int32",
-          "example" : 1
+          "description" : "Action to take:\n * `0` - Stop\n * `1` - Up\n * `2` - Down\n * `3` - Left\n * `4` - Right\n * `5` - Bomb\n",
+          "enum" : [ 0, 1, 2, 3, 4, 5 ]
         }
       },
       "example" : {
-        "action" : 1
+        "action" : 0
       }
     },
     "episode_end_request" : {
@@ -261,9 +301,18 @@
         "reward" : {
           "type" : "integer",
           "format" : "int32",
-          "example" : 1
+          "description" : "Result of the game:\n * `0` - Win\n * `1` - Loss\n * `2` - Tie\n * `3` - Incomplete\n",
+          "enum" : [ 0, 1, 2, 3 ]
         }
       }
+    },
+    "game_type" : {
+      "type" : "integer",
+      "format" : "int32",
+      "description" : "Game type:\n * `1` - FFA\n * `2` - Team\n * `3` - TeamRadio\n * `4` - OneVsOne\n",
+      "example" : 1,
+      "enum" : [ "1", "2", "3", "4" ],
+      "x-enum-string" : true
     }
   }
 }
